[gd_scene load_steps=12 format=3 uid="uid://yhwaoqt5mhex"]

[ext_resource type="Script" uid="uid://c528teifxp01n" path="res://gameplay/mini_games/SleepingMinigame/sleeping_minigame.gd" id="1_f262o"]
[ext_resource type="Texture2D" uid="uid://b8omcrlyaw1eq" path="res://gameplay/mini_games/SleepingMinigame/Assets/Art/Sleeping.png" id="1_mi72b"]
[ext_resource type="Texture2D" uid="uid://dx43o0et61yom" path="res://gameplay/mini_games/SleepingMinigame/Assets/Art/Waking.png" id="2_qw63a"]
[ext_resource type="Texture2D" uid="uid://c6qsfn2nci8jy" path="res://gameplay/mini_games/SleepingMinigame/Assets/Art/HalfSleep.png" id="4_mmbjb"]
[ext_resource type="Texture2D" uid="uid://d2nhsj7jsbt7n" path="res://gameplay/mini_games/SleepingMinigame/Assets/Art/Awake.png" id="5_7nl2x"]
[ext_resource type="Texture2D" uid="uid://j6aq0xpq2m60" path="res://gameplay/mini_games/SleepingMinigame/Assets/Art/Untitled.png" id="7_5b0xa"]
[ext_resource type="Texture2D" uid="uid://fv1wwt5e3m2o" path="res://gameplay/mini_games/SleepingMinigame/Assets/Art/FullSleep.png" id="7_wle36"]
[ext_resource type="Script" uid="uid://clws3dikh2vcm" path="res://globals/assets/rhythm_gameplay.gd" id="8_mmbjb"]
[ext_resource type="Texture2D" uid="uid://dfmtpweekng5d" path="res://globals/assets/art/UI/Line.png" id="10_brimh"]
[ext_resource type="Texture2D" uid="uid://yqla2m7l3261" path="res://gameplay/mini_games/SleepingMinigame/Assets/Art/WakeUpMessages.png" id="10_wle36"]

[sub_resource type="GDScript" id="GDScript_7nl2x"]
script/source = "extends Sprite2D

func Show():
	visible = true
	var fadeInTween = get_tree().create_tween()
	fadeInTween.tween_property( self, \"modulate:a\", 1, 0.01 )
	await fadeInTween.finished
	fadeInTween.kill()
	var fadeOutTween = get_tree().create_tween()
	fadeOutTween.tween_property( self, \"modulate:a\", 0, 0.7 )
	await fadeOutTween.finished
	fadeOutTween.kill()
"

[node name="SleepingMinigame" type="Node2D"]
script = ExtResource("1_f262o")
sleep_texture = ExtResource("1_mi72b")
waking_texture = ExtResource("2_qw63a")
half_sleep_texture = ExtResource("4_mmbjb")
awake_texture = ExtResource("5_7nl2x")

[node name="WakeUpText" type="Sprite2D" parent="."]
visible = false
position = Vector2(584, 128)
scale = Vector2(0.447368, 0.447368)
texture = ExtResource("7_5b0xa")
script = SubResource("GDScript_7nl2x")

[node name="WakingProgress" type="RichTextLabel" parent="."]
offset_left = 440.0
offset_top = 112.0
offset_right = 712.0
offset_bottom = 152.0
text = "/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Character" type="Sprite2D" parent="."]
position = Vector2(576, 432)
scale = Vector2(2.18, 2.18)
texture = ExtResource("7_wle36")

[node name="WakeUpSprites" type="Node" parent="."]

[node name="WakeUp1" type="Sprite2D" parent="WakeUpSprites"]
visible = false
position = Vector2(328, 432)
scale = Vector2(2.36667, 2.36667)
texture = ExtResource("10_wle36")
region_enabled = true
region_rect = Rect2(0, 0, 84.1143, 30.9859)
script = SubResource("GDScript_7nl2x")

[node name="WakeUp2" type="Sprite2D" parent="WakeUpSprites"]
visible = false
position = Vector2(864, 248)
scale = Vector2(2.36667, 2.36667)
texture = ExtResource("10_wle36")
region_enabled = true
region_rect = Rect2(93.3442, 0.462231, 203.567, 30.535)
script = SubResource("GDScript_7nl2x")

[node name="WakeUp3" type="Sprite2D" parent="WakeUpSprites"]
visible = false
position = Vector2(376, 264)
scale = Vector2(2.36667, 2.36667)
texture = ExtResource("10_wle36")
region_enabled = true
region_rect = Rect2(-0.355637, 35.0858, 85.1842, 26.6842)
script = SubResource("GDScript_7nl2x")

[node name="WakeUp1" type="Sprite2D" parent="."]
position = Vector2(576, 72)
scale = Vector2(2.36667, 2.36667)
texture = ExtResource("10_wle36")
region_enabled = true
region_rect = Rect2(0, 0, 84.1143, 30.9859)
script = SubResource("GDScript_7nl2x")

[node name="RhythmGameplay" type="Node" parent="." node_paths=PackedStringArray("rhythm_location")]
script = ExtResource("8_mmbjb")
rhythm_location = NodePath("../RhythmLocation")
track_path = "res://GlobalAssets/AudioData/OhDeerTrackData.json"

[node name="RhythmLocation" type="Marker2D" parent="."]
position = Vector2(792, 256)

[node name="Line" type="Sprite2D" parent="RhythmLocation"]
position = Vector2(136, 0)
texture = ExtResource("10_brimh")
